--- a/registro.html
+++ b/registro.html
@@ -67,12 +67,12 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="/index.html#hero" class="active">Inicio<br></a></li>
-            <li><a href="/index.html#about">Nosotros</a></li>
+            <li><a href="/index.html">Inicio<br></a></li>
+            <!-- <li><a href="/index.html#about">Nosotros</a></li>
             <li><a href="/index.html#services">Servicios</a></li>
-            <li><a href="/index.html#contact">Contacto</a></li>
-            <li><a href="registro.html">Registro de Transportes</a></li>
-            <li><a href="#team">Trabaja con nosotros</a></li>
+            <li><a href="/index.html#contact">Contacto</a></li> -->
+            <li><a href="registro.html" class="active">Registro de Transportes</a></li>
+            <li><a href="postulaciones.html">Trabaja con nosotros</a></li>
             <!--<li><a href="blog.html">Blog</a></li>-->
             <!--<li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
