--- a/postulaciones.html
+++ b/postulaciones.html
@@ -67,7 +67,7 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="/index.html">Inicio<br></a></li>
+            <li><a href="index.html">Inicio<br></a></li>
             <!-- <li><a href="/index.html#about">Nosotros</a></li>
             <li><a href="/index.html#services">Servicios</a></li>
             <li><a href="/index.html#contact">Contacto</a></li> -->
