--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div> -->
           </div>
           <div class="col-lg-5 order-1 order-lg-2 d-flex justify-content-center align-items-center">
-            <img style="max-width: 50%;" src="/Impact/assets/img/Logo Cuadrado.svg" class="img-fluid" alt="">
+            <img style="max-width: 50%;" src="/assets/img/Logo Cuadrado.svg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
