--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="content row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-10">
             <div class="text-center">
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox play-btn"></a>
+              <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox play-btn"></a> -->
               <h3>Registra tu Flota!</h3>
               <h5>¡Recibe primero las mejores ofertas para tu flota! <br> Mantén tus datos actualizados y genera ingresos con tu vehículo de manera fácil y rápida.</h5>
               <a class="cta-btn" href="registro.html">Ir al Registro</a>
