--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-5 justify-content-between">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h2 class><span>Bienvenido a </span><span class="accent">Grupo Aban</span></h2>
+            <h2 class><span>Bienvenido a </span><br><span class="accent">Grupo Aban</span></h2>
             <!-- <p>Genera Ingresos trabajando en el equipo de Shoppers más grande y más prendido del país.</p> -->
             <!-- <div class="d-flex">
               <a href="#about" class="btn-get-started">Comencemos!</a>
@@ -118,7 +118,7 @@
             </div> -->
           </div>
           <div class="col-lg-5 order-1 order-lg-2 d-flex justify-content-center align-items-center">
-            <img style="max-width: 50%;" src="/aban/assets/img/Logo Cuadrado.svg" class="img-fluid" alt="">
+            <img style="max-width: 50%;" src="assets/img/Logo Cuadrado.svg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-cart"></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Servicios UM</a></h4>
+                <h4 class="title"><a href="postulaciones copy.html" class="stretched-link">Oportunidades Laborales</a></h4>
               </div>
             </div><!--End Icon Box -->
           
