--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-cart"></i></div>
-                <h4 class="title"><a href="postulaciones copy.html" class="stretched-link">Oportunidades Laborales</a></h4>
+                <h4 class="title"><a href="oportunidades.html" class="stretched-link">Oportunidades Laborales</a></h4>
               </div>
             </div><!--End Icon Box -->
           
