--- a/oportunidades.html
+++ b/oportunidades.html
@@ -207,19 +207,19 @@
     <div class="container">
       <div class="row d-flex justify-content-center text-center">
         <div class="col-lg-8">
-          <h3>Requisitos para postular</h3>
-          <p>Carnet de identidad</p>
-          <p>Mayor de 18 años</p>
-          <p>Teléfono con sistema Android (y datos móviles)</p>            
-          <p>Contar con boleta de prestación de servicios</p>
-          <p>Visa en caso de extranjeros (Excluyente)</p>
+          <h4>REQUISITOS PARA POSTULAR:</h4>
+          <p>• Carnet de identidad</p>
+          <p>• Mayor de 18 años</p>
+          <p>• Teléfono con sistema Android (y datos móviles)</p>            
+          <p>• Contar con boleta de prestación de servicios</p>
+          <p>• Visa vigente para postulantes extranjeros</p>
 
           <hr>
 
-          <h5>Shoppers y Drivers además deben contar con:</h5>
+          <h4>SHOPPERS Y DRIVERS ADEMÁS DEBEN CONTAR CON:</h4>
 
-          <p>Vehículo con documentación al día</p>
-          <p>Licencia de conducir vigente</p>
+          <p>• Vehículo con documentación al día</p>
+          <p>• Licencia de conducir vigente</p>
 
           <br>
 
