--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li><a href="#services">Servicios</a></li>
             <li><a href="#contact">Contacto</a></li>
             <li><a href="registro.html">Registro de Transportes</a></li>
-            <li><a href="postulaciones.html">Trabaja con nosotros</a></li>
+            <li><a href="oportunidades.html">Trabaja con nosotros</a></li>
             <!--<li><a href="blog.html">Blog</a></li>-->
             <!--<li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
