--- a/inscripciones.html
+++ b/inscripciones.html
@@ -229,7 +229,7 @@
                 </div>
                 
                 <div class="col-md-12" id="detalle-experiencia" style="display: none; margin-top: 10px;">
-                  <label for="detalles">Por favor, describe tu experiencia:</label>
+                  <label for="detalles">Por favor, describe brevemente tu experiencia:</label>
                   <textarea id="detalles" class="form-control" name="detalles" rows="4"></textarea>
                 </div>
                 
