--- a/oportunidades.html
+++ b/oportunidades.html
@@ -126,7 +126,7 @@
             <div class="banner" style="background-image: url('assets/img/Picker-A.jpg');">
               <div class="banner-overlay">
                 <h3 class="banner-empleos">Picker</h3>
-                <a href="https://abaneros.trabajando.cl/" target="_blank" class="btn btn-empleos">Postula aquí</a>
+                <a href="inscripciones.html" target="_blank" class="btn btn-empleos">Postula aquí</a>
               </div>
             </div>
           </div>
